<resources>
    <string name="connectionString">https://192.168.1.11:44350/"</string>

    <string name="EditTextHintUsername">Username</string>
    <string name="EditTextHintPassword">Password</string>
    <string name="ButtonLoginText">Login</string>
    <string name="ButtonRegisterText">Register</string>
    <string name="ButtonTextGuest">Continue as a guest</string>
    <string name="prompt_password">Password</string>
    <string name="actionBarTittle">BACK</string>
    <string name="register">Register</string>
    <string name="enter_password">Password   *</string>
    <string name="enter_user_name">Username   *</string>
    <string name="apply">Apply</string>
    <string name="phone_number">Phone number</string>
    <string name="E_mail_address">E-mail address</string>
    <string name="last_name">Last Name</string>
    <string name="TextView_phone_number">Phone Number</string>
    <string name="TextView_postal_address">Postal Address</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="category_name">Category name</string>
    <string name="categories">Categories</string>
    <string name="top_picks">Top Picks</string>
    <string name="total_price">Total Price:</string>
    <string name="your_cart_is_currently_empty">Your cart is currently empty</string>
    <string name="continue_shopping">Continue Shopping</string>
    <string name="check_out">Check out</string>
    <string name="confirm_password_editText">Confirm Password</string>
    <string name="required_fields">* required fields</string>
    <string name="product_name">Product Name</string>
    <string name="description">Description</string>
    <string name="Open">Open</string>
    <string name="Close">Close</string>
    <string name="textViewWelcome">Welcome</string>
    <string name="username">Username</string>
    <string name="clear_all">Clear All</string>
    <string name="quantity">Quantity:</string>
    <string name="value">Value</string>
    <string name="noMoreReviews">No more reviews</string>
    <string name="product_image">Product image</string>
    <string name="personal_information">Personal Information</string>
    <string name="review_text">Review Text</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="wish_list">Wish List</string>
    <string name="enable_dark_mode">Enable Dark Mode</string>
    <string name="settings">Settings</string>
    <string name="login_logout">Login / Logout</string>
    <string name="wish_list_is_empty">Your wishlist is empty</string>
    <string name="thank_you_for_your_purchase">Thank you for your purchase! :)</string>
    <string name="your_order_number_is">Your order number is:</string>
    <string name="order_number">order number</string>
    <string name="title_activity_orders">OrdersActivity</string>
    <string name="status">Status:</string>
    <string name="price">Price</string>
    <string name="dollarSign">$</string>
    <string name="order_date">order date</string>
    <string name="details">Details</string>
    <string name="next">Next</string>
    <string name="note">Note: You can log in as: </string>
    <string name="loginUsername">Username: admin</string>
    <string name="loginPassword">Password: 1234</string>
    <string name="optional_information">This part is all optional, feel free to just click "Register"</string>
    <string name="postal_address">Postal Address</string>
    <string name="email">Email</string>
    <string name="browse_all">Browse All</string>
    <string name="base_quantity">1</string>
    <string name="no_internet">There is currently no internet connection, please make sure you have internet access</string>
    <string name="retry">Retry</string>
    <string name="no_internet_title">No Internet</string>
    <string name="error">Error</string>
    <string name="server_error_message">There was an error while trying to reach the server! :(</string>
    <string name="loading_message">Please wait…</string>
    <string name="question_1">1. What is the purpose of this application?</string>
    <string name="answer_1">This purely an app for demonstration of skill only. It represents how a mobile store app would behave</string>
    <string name="question_2">2. Who made this app?</string>
    <string name="answer_2">Petar Račić, you can find my other projects on the following link racic.dev</string>
    <string name="question_3">3. Which IDE was used to develop this app?</string>
    <string name="answer_3">Android Studio has been used to develop this app</string>
    <string name="title_activity_frequently_asked_questions">FrequentlyAskedQuestionsActivity</string>
    <string name="frequently_asked_questions">FAQ</string>
    <string name="search">Search</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="my_orders">My Orders</string>
    <string name="first_name">First Name</string>
    <string name="contact_information">Contact Information</string>
    <string name="e_mail_address">E-mail Address</string>
    <string name="login_needed">You need to login before you can checkout</string>
    <string name="no_profile">It looks like you don\'t have a profile yet</string>
    <string name="make_profile">Would you like to make one?</string>
    <string name="yes">yes</string>
    <string name="processing">Processing</string>
    <string name="gallery">Gallery</string>
    <string name="reviews">Reviews</string>
    <string name="questions">Questions</string>
    <string name="load_more">Load more</string>
</resources>